<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:id="@+id/regTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/regTitle"
                android:textAlignment="center"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/regUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/regPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/regPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password2"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/regEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/regBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_birthday"
                android:minHeight="48dp"
                android:textAlignment="center" />
            <LinearLayout
                android:id="@+id/reg_gender_check"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/radioGenderInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/radio_gender_info"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:text="@string/reg_gender"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioGenderOption1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/options_man"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioGenderOption2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/options_woman" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/reg_gender_check_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/radioGenderInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/reg_checkbox_info"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
                <Spinner
                    android:id="@+id/prefer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:visibility="gone"
                    android:layout_weight="2" >
                </Spinner>
                <TextView
                    android:id="@+id/multiplyPrefer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/hint_prefers"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reg_prefer_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/checkboxInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/reg_checkbox_info"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <CheckBox
                    android:id="@+id/cb_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_check_1"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/cb_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_check_2"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/cb_option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_check_3"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/cb_option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_check_4"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/cb_option5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_check_5"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/reg_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reg_submit" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>